# frp-freedom

./: .gitignore  FRP Bypass Methods research.md  PRD.md  README.md  README_zh.md  SETUP_GUIDE.md  ai_features_demo.py  config.yaml  environment.yml  main.py  pyproject.toml  requirements.txt  test_ai_features.py  test_app.py
.github/workflows/: python-package-conda.yml
scripts/: detect_and_report_windows.ps1  install_adb_windows.ps1
src/: __init__.py
src/ai/: __init__.py  ai_engine.py  notification_system.py
src/bypass/: __init__.py  adb_exploits.py  bypass_manager.py  hardware_exploits.py  interface_exploits.py  system_exploits.py  types.py
src/core/: __init__.py  config.py  device_manager.py  logger.py  samsung_adb_enabler.py
src/gui/: __init__.py  bypass_execution.py  device_selection.py  main_window.py  method_selection.py  ownership_verification.py  utils.py
